<resources>
    <string name="app_name">PKL Paninti</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Selamat Datang Parents!</string>
    <string name="email">Email atau Username</string>
    <string name="pass">Password</string>
    <string name="forget">Lupa Password?</string>
    <string name="submit">Masuk</string>
    <string name="or">Atau</string>
    <string name="google">Lanjutkan dengan Google</string>
    <string name="bottom">Belum punya akun? Daftar Sekarang</string>
    <string name="name">Nama Lengkap</string>
    <string name="user">Username</string>
    <string name="gmail">Alamat Email</string>
    <string name="confirm">Konfirmasi Password</string>
    <string name="regis">Daftar</string>
    <string name="backL">Sudah punya akun? Masuk Sekarang</string>
    <string name="pr">Jenis Kelamin</string>
    <string name="boy">Laki-laki</string>
    <string name="girl">Perempuan</string>

    <!-- Validasi Error -->
    <string name="valUser">Username wajib diisi</string>
    <string name="valPass">Password wajib diisi</string>
    <string name="valName">Nama lengkap wajib diisi</string>
    <string name="valEmail">Email wajib diisi</string>
    <string name="valConfirm">Konfirmasi password wajib diisi</string>
    <string name="regexFullName">Nama lengkap minimal berisi 2 karakter</string>
    <string name="regexName">Nama lengkap tidak bisa berisi angka</string>
    <string name="regexMinUser">Username minimal berisi 6 karakter</string>
    <string name="regexUser">Username tidak bisa menggunakan simbol selain . dan _</string>
    <string name="regexEmail">Format email tidak sesuai</string>
    <string name="regexMinPass">Password minimal berisi 6 karakter, 1 huruf kapital dan 1 angka</string>
    <string name="regexPass">Password minimal berisi 1 huruf kapital dan 1 angka</string>
    <string name="regexConfirm">Konfirmasi password tidak sesuai</string>

    <!-- Weather -->
    <string name="days">7 Days</string>
    <string name="dy">Tomorrow</string>
    <string name="day">Monday</string>
    <string name="weather">Cloudy</string>
    <string name="num">24</string>
    <string name="temperatur">27°</string>
    <string name="temp">/17°</string>
    <string name="speed">13 km/h</string>
    <string name="wind">Wind</string>
    <string name="persen">24%</string>
    <string name="humi">Humidity</string>
    <string name="total">82%</string>
    <string name="rain">Chance of rain</string>

    <string name="day1">Monday</string>
    <string name="day2">Tuesday</string>
    <string name="day3">Wednesday</string>
    <string name="day4">Thursday</string>
    <string name="day5">Friday</string>
    <string name="day6">Saturday</string>
    <string name="day7">Sunday</string>

    <string name="wheat2">Rainy</string>
    <string name="wheat3">Strom</string>
    <string name="wheat4">Sunny</string>

    <string name="temp1">29°</string>
    <string name="temp2">24°</string>
    <string name="temp3">17°</string>
    <string name="temp4">18°</string>
    <string name="temp5">22°</string>
    <string name="temp6">24°</string>
    <string name="temp7">30°</string>

    <string name="celci">°C</string>
    <string name="loc">Minsk</string>
    <string name="date">Monday, 17 May</string>
    <string name="today">Today</string>
    <string name="dys">7 days</string>
    <string name="time">11:00</string>
    <string name="time2">10:00</string>
    <string name="time3">12:00</string>
    <string name="time4">01:00</string>

    <string name="menu_celcius">°Celcius</string>
    <string name="menu_fahrenheit">°Fahrenheit</string>
    <string name="menu_kelvin">Kelvin</string>
    <string name="fahrenheit">°F</string>
    <string name="kelvin">°K</string>

</resources>