<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/weather">


        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.Title"
            android:layout_marginTop="@dimen/rating_bar_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/icon_bookmark_height"/>

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/large_margin"
            android:src="@drawable/icon_google"
            android:layout_marginStart="@dimen/color_product_select_variant"
            android:layout_marginTop="@dimen/avatar_stack_space"
            app:layout_constraintStart_toStartOf="@+id/day"
            app:layout_constraintEnd_toEndOf="@+id/weather"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rating_bar_height"
            android:text="@string/weather"
            android:textAppearance="@style/TextAppearance.Maven"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="@+id/icon"
            app:layout_constraintEnd_toEndOf="@+id/temp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperatur"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.Body"
            android:layout_marginTop="@dimen/rating_bar_height"
            android:layout_marginEnd="@dimen/icon_bookmark_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />




</androidx.constraintlayout.widget.ConstraintLayout>