<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.view.fragment_weather_home"
    android:background="@color/weather">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="650dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >

                    <ImageView
                        android:id="@+id/menu"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/avatar_height"
                        android:layout_marginEnd="@dimen/zero_dp"
                        android:layout_marginTop="@dimen/large_margin"
                        android:src="@drawable/icon_menu"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/celci"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/toolbar_elevation"
                        android:layout_marginTop="16dp"
                        android:text="@string/celci"
                        android:textAppearance="@style/TextAppearance.Maven2"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/calendar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/medium_start"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginStart="@dimen/medium"
                        android:layout_marginEnd="@dimen/large_end"
                        android:src="@drawable/icon_loc"
                        app:layout_constraintEnd_toStartOf="@+id/textView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/menu" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium_start"
                        android:layout_marginTop="@dimen/screen_margin"
                        android:text="@string/loc"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.Maven4"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/calendar"
                        app:layout_constraintTop_toBottomOf="@+id/menu" />

                    <ImageView
                        android:id="@+id/weather"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/large_end"
                        android:src="@drawable/icon_weather"
                        android:layout_marginTop="@dimen/rating_bar_height"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:layout_constraintEnd_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp1"
                        android:textAppearance="@style/TextAppearance.Maven5"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/weather" />

                    <TextView
                        android:id="@+id/weat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weather"
                        android:textAppearance="@style/TextAppearance.Maven6"
                        android:textColor="@color/font"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/num" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textAppearance="@style/TextAppearance.Caption2"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/weat" />

                    <com.google.android.material.divider.MaterialDivider
                        android:id="@+id/div"
                        android:layout_width="@dimen/zero_dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/rating_bar_height"
                        android:layout_marginStart="@dimen/medium_start"
                        android:layout_marginEnd="@dimen/medium_start"
                        app:dividerColor="@color/div"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/date" />

                    <ImageView
                        android:id="@+id/iconWind"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/avatar_height"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginStart="@dimen/medium_text"
                        android:src="@drawable/icon_wind"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/div" />

                    <TextView
                        android:id="@+id/speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium_text"
                        android:text="@string/speed"
                        android:textAppearance="@style/TextAppearance.Body3"
                        android:textColor="@color/name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iconWind" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/med_text"
                        android:text="@string/wind"
                        android:textAppearance="@style/TextAppearance.Body3"
                        android:textColor="@color/div"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/speed" />

                    <ImageView
                        android:id="@+id/iconWater"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/avatar_height"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:src="@drawable/icon_water"
                        app:layout_constraintStart_toStartOf="@+id/iconWind"
                        app:layout_constraintEnd_toEndOf="@+id/iconRain"
                        app:layout_constraintTop_toBottomOf="@+id/div" />

                    <TextView
                        android:id="@+id/persen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/chip_brand_icon_size"
                        android:text="@string/persen"
                        android:textAppearance="@style/TextAppearance.Body3"
                        android:textColor="@color/name"
                        app:layout_constraintStart_toStartOf="@id/speed"
                        app:layout_constraintEnd_toEndOf="@id/total"
                        app:layout_constraintTop_toBottomOf="@id/iconWater" />

                    <TextView
                        android:id="@+id/water"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humi"
                        android:textAppearance="@style/TextAppearance.Body3"
                        android:textColor="@color/div"
                        app:layout_constraintStart_toStartOf="@id/wind"
                        app:layout_constraintEnd_toEndOf="@id/rain"
                        app:layout_constraintTop_toBottomOf="@id/persen" />


                    <ImageView
                        android:id="@+id/iconRain"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/avatar_height"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginEnd="40dp"
                        android:src="@drawable/icon_rain"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/div" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:layout_marginEnd="@dimen/custom_text"
                        android:textAppearance="@style/TextAppearance.Body3"
                        android:textColor="@color/name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iconRain" />

                    <TextView
                        android:id="@+id/rain"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rain"
                        android:layout_marginEnd="@dimen/color_product_select_variant"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.Body3"
                        android:textColor="@color/div"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/total"/>


                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_start"
                android:layout_marginTop="@dimen/rating_bar_height"
                android:text="@string/today"
                android:textAppearance="@style/TextAppearance.Title3"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <TextView
                android:id="@+id/dys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/option_button_icon_height"
                android:layout_marginEnd="40dp"
                android:text="@string/dys"
                android:textAppearance="@style/TextAppearance.Subtitle2"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/iconNext"
                app:layout_constraintTop_toBottomOf="@id/header" />

            <ImageView
                android:id="@+id/iconNext"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/chip_brand_icon_size"
                android:layout_marginTop="@dimen/large_margin"
                android:src="@drawable/icon_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/zero_dp"
                android:orientation="horizontal"
                app:flow_horizontalAlign="center"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/day"
                tools:listitem="@layout/fragment_list_item" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</FrameLayout>