<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.view.fragment_weather"
    android:background="@color/weather">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/avatar_height"
                        android:layout_marginEnd="@dimen/zero_dp"
                        android:layout_marginTop="@dimen/large_margin"
                        android:src="@drawable/icon_back"
                        android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/menu"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/avatar_height"
                        android:layout_marginEnd="@dimen/zero_dp"
                        android:layout_marginTop="@dimen/large_margin"
                        android:src="@drawable/icon_menu"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/calendar"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/avatar_height"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:src="@drawable/icon_calendar"
                        android:layout_marginStart="@dimen/large_start"
                        android:layout_marginEnd="@dimen/large_end"
                        app:layout_constraintTop_toBottomOf="@+id/menu"
                        app:layout_constraintEnd_toStartOf="@+id/textView"/>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:textAppearance="@style/TextAppearance.Maven3"
                        android:textStyle="bold"
                        android:text="@string/days"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:layout_marginStart="@dimen/small_text"
                        app:layout_constraintStart_toEndOf="@id/calendar"
                        app:layout_constraintTop_toBottomOf="@+id/menu" />

                    <ImageView
                        android:id="@+id/weather"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/medium"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/icon_weather"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dy"
                        android:textColor="@color/white"
                        android:textAppearance="@style/TextAppearance.Title"
                        android:layout_marginTop="@dimen/rating_bar_height"
                        android:layout_marginStart="@dimen/regular_start"
                        app:layout_constraintTop_toBottomOf="@id/textView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/num"
                        android:textColor="@color/white"
                        android:textAppearance="@style/TextAppearance.Large"
                        android:layout_marginStart="@dimen/color_product_select_variant"
                        app:layout_constraintTop_toBottomOf="@id/day"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/temp"
                        android:textColor="@color/white"
                        android:textAppearance="@style/TextAppearance.Medium"
                        android:layout_marginTop="@dimen/avatar_user_article_height"
                        android:layout_marginStart="@dimen/custom_width"
                        app:layout_constraintTop_toBottomOf="@id/day"
                        app:layout_constraintStart_toStartOf="@+id/num"/>

                    <TextView
                        android:id="@+id/weat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weather"
                        android:textColor="@color/white"
                        android:layout_marginStart="@dimen/custom_image"
                        android:textAppearance="@style/TextAppearance.Title"
                        app:layout_constraintTop_toBottomOf="@id/temp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <com.google.android.material.divider.MaterialDivider
                        android:id="@+id/div"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/rating_bar_height"
                        app:dividerColor="@color/div"
                        android:layout_marginStart="@dimen/image_brand_height"
                        android:layout_marginEnd="@dimen/image_brand_height"
                        app:layout_constraintTop_toBottomOf="@+id/weather" />

                    <ImageView
                        android:id="@+id/iconWind"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/avatar_height"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginStart="@dimen/medium_text"
                        android:src="@drawable/icon_wind"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/div" />

                    <TextView
                        android:id="@+id/speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium_text"
                        android:text="@string/speed"
                        android:textAppearance="@style/TextAppearance.Body3"
                        android:textColor="@color/name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iconWind" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/med_text"
                        android:text="@string/wind"
                        android:textAppearance="@style/TextAppearance.Body3"
                        android:textColor="@color/div"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/speed" />

                    <ImageView
                        android:id="@+id/iconWater"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/avatar_height"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:src="@drawable/icon_water"
                        app:layout_constraintStart_toStartOf="@+id/iconWind"
                        app:layout_constraintEnd_toEndOf="@+id/iconRain"
                        app:layout_constraintTop_toBottomOf="@+id/div" />

                    <TextView
                        android:id="@+id/persen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/chip_brand_icon_size"
                        android:text="@string/persen"
                        android:textAppearance="@style/TextAppearance.Body3"
                        android:textColor="@color/name"
                        app:layout_constraintStart_toStartOf="@id/speed"
                        app:layout_constraintEnd_toEndOf="@id/total"
                        app:layout_constraintTop_toBottomOf="@id/iconWater" />

                    <TextView
                        android:id="@+id/water"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humi"
                        android:textAppearance="@style/TextAppearance.Body3"
                        android:textColor="@color/div"
                        app:layout_constraintStart_toStartOf="@id/wind"
                        app:layout_constraintEnd_toEndOf="@id/rain"
                        app:layout_constraintTop_toBottomOf="@id/persen" />


                    <ImageView
                        android:id="@+id/iconRain"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/avatar_height"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginEnd="40dp"
                        android:src="@drawable/icon_rain"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/div" />

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:layout_marginEnd="@dimen/custom_text"
                        android:textAppearance="@style/TextAppearance.Body3"
                        android:textColor="@color/name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/iconRain" />

                    <TextView
                        android:id="@+id/rain"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rain"
                        android:layout_marginEnd="@dimen/color_product_select_variant"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/TextAppearance.Body3"
                        android:textColor="@color/div"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/total"/>



                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header"
                tools:listitem="@layout/fragment_list" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>